--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -48,7 +48,7 @@
 
 .white h1{
     margin-bottom: 3%;
-    font-size: 4vmin;
+    font-size: 4.3vmin;
 }
 
 .white p{
@@ -59,4 +59,33 @@
 
 li {
    list-style:none;
+    padding: 3px;
+}
+
+#why-us {
+    text-align: center;
+    padding-bottom: 20px;
+    width: 70%;
+    margin: auto;
+}
+#why-us h1 {
+    margin-bottom: 3%;
+    font-size: 4.3vmin;
+}
+#why-us p {
+    font-size: 2.7vmin;
+}
+
+.companies img {
+    width: 170px;
+    height: 140px;
+    margin: auto;
+}
+.companies li {
+    height: 250px;
+    width: 180px;
+    margin: auto;
+}
+.companies li:hover {
+    background: #ACBFD0
 }
