--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,9 @@
     <!-- Stuff for yelp -->
     <script>(function() { var s = document.createElement("script");s.async = true;s.onload = s.onreadystatechange = function(){getYelpWidget("christos-steak-house-astoria","270","RED","y","y","1");};s.src='http://chrisawren.com/widgets/yelp/yelpv2.js' ;var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);})();</script>
     <!-- Stuff for Fbook -->
+    <!-- Stuff for yelp -->
+    <script>(function() { var s = document.createElement("script");s.async = true;s.onload = s.onreadystatechange = function(){getYelpWidget("christos-steak-house-astoria","270","RED","y","y","1");};s.src='http://chrisawren.com/widgets/yelp/yelpv2.js' ;var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);})();</script>
+    <!-- Stuff for Fbook -->
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
@@ -26,6 +29,7 @@
       js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/public/javascript/jquery.min.js"></script>
@@ -72,7 +76,7 @@
         <div id="static-carousel" class="carousel slide">
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="http://placehold.it/1900x800" alt="" class="img-responsive">
+                    <img src="/public/images/carpet.jpg" alt="" class="img-responsive">
                     <div class="carousel-caption">
                         <h3>Renew Your Look</h3>
                         <p>With Metropolitian Carpet Specialists</p>
@@ -149,7 +153,7 @@
                          <h2>Cleaning Services</h2>
                             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
                     </div>
-            </div>
+                    </div>
         </div>
             <div class="item">
             <img src="/public/images/photo-carpet-arrow.png" class="img-responsive">
@@ -193,6 +197,77 @@
         <span class="icon-next"></span>
         </a>
     </div>
+        <div id="why-us">
+            <h1>Why Metropolitan Carpet Specialists?</h1>
+            <p>Lorem Ipsum is simply dummy text of the
+                printing and typesetting industry. Lorem
+                Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown
+                printer took a galley of type and scrambled
+                it to make a type specimen book. It has survived
+                not only five centuries, but also the leap into
+                electronic typesetting, remaining essentially unchanged.
+            </p>
+        </div>
+        <div class="white">
+            <h1>Christos Companies</h1>
+            <div class="companies row">
+                <div class="col-md-2">
+                    <a href="#">
+                        <li>
+                            <img class="img-responsive" src="/public/images/logos/CC%20Build%20Svcs%20Icon.jpg">
+                            <p>Christos Building Services</p>
+                        </li>
+                    </a>
+                </div>
+                <div class="col-md-2">
+                    <a href="#">
+                        <li>
+                            <img class="img-responsive" src="/public/images/logos/CC%20US%20Vending%20Icon.jpg">
+                            <p>US Vending</p>
+                        </li>
+                    </a>
+                </div>
+                <div class="col-md-2">
+                    <a href="#">
+                        <li>
+                            <img class="img-responsive" src="/public/images/logos/CC%20Paramount%20Icon.jpg">
+                            <p>Paramount Services</p>
+                        </li>
+                    </a>
+                </div>
+                <div class="col-md-2">
+                    <a href="#">
+                        <li>
+                            <img class="img-responsive" src="/public/images/logos/CC%20Cab%20Craft%20Icon.jpg">
+                            <p>Cabinet Craft</p>
+                        </li>
+                    </a>
+                </div>
+                <div class="col-md-2">
+                    <a href="#">
+                        <li>
+                            <img class="img-responsive" src="/public/images/metro_logo.png">
+                            <p>Metropolitan Carpet Specialists</p>
+                        </li>
+                    </a>
+                </div>
+                <div class="col-md-2">
+                    <a href="#">
+                        <li>
+                            <img class="img-responsive" src="/public/images/logos/CC%20SK%20Real%20Icon.jpg">
+                            <p>Sarantis Properties</p>
+                        </li>
+                    </a>
+                </div>
+            </div>
+        </div>
+          <div class ="footer-header">
+            <h2>Heading</h2>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+             <div class="fb-page" data-href="https://www.facebook.com/Metropolitan-Carpet-Specialists-Inc-131101043624574/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-height="300px" data-width="270px"></div>
+            </div>
+        <hr>
 
     <div class ="footer-header">
     <div class ="row">
@@ -200,7 +275,6 @@
             <h4>Metropolitan Carpet Specialists</h4>
             <p>21441 Pacific Blvd.<br>
             Sterling, VA 20166</p>
-
             <p><b>Phone:</b> 703-964-3210<br>
             <b>Fax:</b> 703-964-3215<br>
             <b>Emergency:</b> 877-687-5730</p>
@@ -220,6 +294,8 @@
     </div> <!-- /container -->
 </div>
 
+
 </body>
+
 
 </html>
