--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,11 +72,11 @@
         </div>
     </div>
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div id="top-body" class="container">
+    <div id="top-body" class="">
         <div id="static-carousel" class="carousel slide">
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="/public/images/carpet.jpg" alt="" class="img-responsive">
+                    <img src="/public/images/photo-carpet.png" alt="" class="img-responsive">
                     <div class="carousel-caption">
                         <h3>Renew Your Look</h3>
                         <p>With Metropolitian Carpet Specialists</p>
@@ -101,7 +101,7 @@
         </div>
     </div>
 -->
-    <div class="container">
+    <div class="">
 
         <!-- Services Start -->
 
@@ -262,13 +262,6 @@
                 </div>
             </div>
         </div>
-          <div class ="footer-header">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-             <div class="fb-page" data-href="https://www.facebook.com/Metropolitan-Carpet-Specialists-Inc-131101043624574/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-height="300px" data-width="270px"></div>
-            </div>
-        <hr>
-
     <div class ="footer-header">
     <div class ="row">
            <div class="col-md-4">
